--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,8 @@ android {
     defaultConfig {
         applicationId "com.anandj.rickmorty"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
+        compileSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -69,10 +70,13 @@ dependencies {
 
     // Compose
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.activity:activity-compose:1.3.1'
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha01"
+
+    implementation "androidx.compose.material3:material3:1.0.0-beta03"
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-beta03"
+
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 
@@ -80,6 +84,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    implementation "com.google.android.material:material:1.6.1"
 
     // Other
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
