--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ android {
 dependencies {
     def nav_version = "2.5.1"
     def retrofit_version = "2.9.0"
+    def material3_version = "1.1.1"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 
@@ -75,8 +76,8 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha01"
 
-    implementation "androidx.compose.material3:material3:1.0.0-beta03"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.0-beta03"
+    implementation "androidx.compose.material3:material3:$material3_version"
+    implementation "androidx.compose.material3:material3-window-size-class:$material3_version"
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
@@ -91,8 +92,9 @@ dependencies {
     // Other
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
 
-    implementation "com.airbnb.android:showkase:1.0.0-beta18"
-    ksp "com.airbnb.android:showkase-processor:1.0.0-beta18"
+    def showkase_ver = "1.0.0-beta18"
+    implementation "com.airbnb.android:showkase:$showkase_ver"
+    ksp "com.airbnb.android:showkase-processor:$showkase_ver"
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
