--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id "com.diffplug.spotless" version "6.11.0"
-    id 'com.google.devtools.ksp'
+    alias libs.plugins.android.application
+    alias libs.plugins.kotlin
+    alias libs.plugins.spotless
+    alias libs.plugins.ksp
 }
 
 spotless {
@@ -50,7 +50,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerExtensionVersion = libs.versions.kotlin.compose.get()
     }
     packagingOptions {
         resources {
@@ -60,45 +60,42 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.5.1"
-    def retrofit_version = "2.9.0"
-    def material3_version = "1.1.1"
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
+    implementation libs.kotlin.coroutines
 
     // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation libs.retrofit
+    implementation libs.retrofit.moshi
 
     // Compose
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.3.1'
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha01"
+    implementation libs.androidx.compose.ui
+    implementation libs.androidx.compose.ui.preview
 
-    implementation "androidx.compose.material3:material3:$material3_version"
-    implementation "androidx.compose.material3:material3-window-size-class:$material3_version"
+    implementation libs.androidx.activity.compose
+    implementation libs.androidx.constraintlayout.compose
 
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    implementation libs.androidx.compose.material3
+    implementation libs.androidx.compose.material3.windowsizeclass
+
+    debugImplementation libs.androidx.compose.ui.tooling
+    androidTestImplementation libs.androidx.compose.ui.junit4
 
     // Android Support
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation "androidx.navigation:navigation-compose:$nav_version"
-
-    implementation "com.google.android.material:material:1.6.1"
+    implementation libs.androidx.core.ktx
+    implementation libs.androidx.lifecycle.ktx
+    implementation libs.androidx.nav.compose
 
     // Other
-    implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+    implementation libs.coil
 
-    def showkase_ver = "1.0.0-beta18"
-    implementation "com.airbnb.android:showkase:$showkase_ver"
-    ksp "com.airbnb.android:showkase-processor:$showkase_ver"
+
+    implementation libs.showkase
+    ksp libs.showkase.ksp
 
     // Testing
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation libs.junit
+    androidTestImplementation libs.androidx.test.junit
+    androidTestImplementation libs.androidx.test.espresso
 
 }
