--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,10 @@
 buildscript {
-    ext {
-        compose_version = '1.4.3'
-    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
-    id 'com.google.devtools.ksp' version '1.8.10-1.0.9' apply false
+    alias libs.plugins.android.application apply false
+    alias libs.plugins.android.library apply false
+    alias libs.plugins.kotlin apply false
+    alias libs.plugins.ksp apply false
 }
 
 task clean(type: Delete) {
