Messy implementation of paging for characters screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,8 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.lifecycle.ktx
     implementation libs.androidx.nav.compose
+    implementation libs.androidx.paging
+    implementation libs.androidx.paging.compose
 
     // Other
     implementation libs.coil
