--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,11 @@ buildscript {
 plugins {
     alias libs.plugins.android.application apply false
     alias libs.plugins.android.library apply false
+    alias libs.plugins.hilt apply false
     alias libs.plugins.kotlin apply false
+    alias libs.plugins.kotlin.kapt apply false
     alias libs.plugins.ksp apply false
+
 }
 
 task clean(type: Delete) {
