Integrate Timber logging library (https://github.com/JakeWharton/timber)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,7 +98,7 @@ dependencies {
 
     // Other
     implementation libs.coil
-
+    implementation libs.timber
     implementation libs.showkase
     ksp libs.showkase.ksp
 
